--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#1a000099",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.remoteColor": "#1a0000"
+  "peacock.remoteColor": "#1a0000",
+  "makefile.configureOnOpen": false
 }
